--- a/views/new_listing.ejs
+++ b/views/new_listing.ejs
@@ -31,7 +31,7 @@
               <td><label for="category">Category *:</label></td>
               <td><select type="text" name="category" id="product-category">
                   <option value="" disabled selected hidden>Choose a category</option>
-                  <option value="Cellphones">Cellphones</option>
+                  <option value="Cell Phones">Cell Phones</option>
                   <option value="Laptops">Laptops</option>
                   <option value="Desktops">Desktops</option>
                   <option value="Tablets">Tablets</option>
